--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "stop": "node wiki stop",
     "restart": "node wiki restart",
     "build": "node dev/fuse --build",
-    "dev": "node dev/fuse --dev",
+    "dev:client": "node dev/fuse --dev",
+    "dev:server": "nodemon",
+    "dev:server:alt": "node-dev server --no-deps --respawn --no-notify",
     "test": "eslint --ext .js,.vue . && jest"
   },
   "bin": {
@@ -36,7 +38,7 @@
     "node": ">=8.9.3"
   },
   "dependencies": {
-    "apollo-server-express": "1.3.0",
+    "apollo-server-express": "1.3.2",
     "auto-load": "3.0.0",
     "axios": "0.17.1",
     "bcryptjs-then": "1.0.1",
@@ -64,8 +66,8 @@
     "follow-redirects": "1.2.6",
     "fs-extra": "5.0.0",
     "git-wrapper2-promise": "0.2.9",
-    "graphql": "0.12.1",
-    "graphql-tools": "2.13.0",
+    "graphql": "0.12.3",
+    "graphql-tools": "2.14.1",
     "highlight.js": "9.12.0",
     "i18next": "10.2.1",
     "i18next-express-middleware": "1.0.9",
@@ -90,7 +92,7 @@
     "markdown-it-task-lists": "2.1.0",
     "mathjax-node": "1.2.1",
     "mime-types": "2.1.17",
-    "moment": "2.20.0",
+    "moment": "2.20.1",
     "moment-timezone": "0.5.14",
     "mongodb": "3.0.0-rc0",
     "multer": "1.3.0",
@@ -117,11 +119,11 @@
     "request": "2.83.0",
     "request-promise": "4.2.2",
     "semver": "5.4.1",
-    "sequelize": "4.28.5",
+    "sequelize": "4.28.6",
     "serve-favicon": "2.4.5",
     "simplemde": "1.11.2",
     "stream-to-promise": "2.2.0",
-    "tar": "4.1.1",
+    "tar": "4.2.0",
     "through2": "2.0.3",
     "uuid": "3.1.0",
     "validator": "9.2.0",
@@ -136,7 +138,7 @@
     "autoprefixer": "7.2.3",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
-    "babel-jest": "21.2.0",
+    "babel-jest": "22.0.4",
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
@@ -152,27 +154,28 @@
     "eslint-plugin-standard": "3.0.1",
     "eslint-plugin-vue": "3.13.1",
     "fuse-box": "2.5.0-beta.1",
-    "graphql-tag": "^2.6.0",
+    "graphql-tag": "^2.6.1",
     "i18next-xhr-backend": "1.5.0",
-    "jest": "21.2.1",
-    "jest-junit": "3.4.0",
+    "jest": "22.0.4",
+    "jest-junit": "3.4.1",
     "js-cookie": "2.2.0",
+    "node-dev": "3.1.3",
     "node-sass": "4.7.2",
-    "nodemon": "1.13.3",
+    "nodemon": "1.14.3",
     "postcss-selector-parser": "3.1.1",
     "pug-lint": "2.5.0",
     "twemoji-awesome": "1.0.6",
     "typescript": "2.6.2",
     "uglify-es": "3.2.2",
     "vee-validate": "2.0.0-rc.27",
-    "vue": "2.5.11",
+    "vue": "2.5.13",
     "vue-clipboards": "1.2.0",
     "vue-hot-reload-api": "2.2.4",
     "vue-lodash": "1.0.4",
     "vue-material": "^0.8.1",
-    "vue-resource": "1.3.4",
+    "vue-resource": "1.3.5",
     "vue-simple-breakpoints": "1.0.3",
-    "vue-template-compiler": "2.5.11",
+    "vue-template-compiler": "2.5.13",
     "vue-template-es2015-compiler": "1.6.0",
     "vuex": "3.0.1",
     "vuex-persistedstate": "2.4.2"
@@ -191,6 +194,24 @@
     "output": "./test-results/junit.xml",
     "classNameTemplate": "{classname}-{title}",
     "titleTemplate": "{classname}-{title}"
+  },
+  "nodemonConfig": {
+    "exec": "node server --dev",
+    "ignore": [
+      "assets/",
+      "client/",
+      "data/",
+      "dev/",
+      "test/",
+      "test-results/"
+    ],
+    "ext": "js json graphql",
+    "watch": [
+      "server"
+    ],
+    "env": {
+      "NODE_ENV": "development"
+    }
   },
   "collective": {
     "type": "opencollective",
