Add Swedish language 🇸🇪

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -117,4 +117,7 @@ langs:
   -
     id: es
     name: Spanish - Español
+  -
+    id: sv
+    name: Swedish - Svenska
 # ---------------------------------
