--- a/package.json
+++ b/package.json
@@ -100,13 +100,16 @@
     "node-graceful": "0.2.3",
     "ora": "1.3.0",
     "passport": "0.4.0",
+    "passport-auth0": "0.6.1",
     "passport-azure-ad-oauth2": "0.0.4",
+    "passport-discord": "0.1.3",
     "passport-facebook": "2.1.1",
     "passport-github2": "0.1.11",
     "passport-google-oauth20": "1.0.0",
     "passport-ldapauth": "2.0.0",
     "passport-local": "1.0.0",
     "passport-slack": "0.0.7",
+    "passport-twitch": "1.0.3",
     "passport-windowslive": "1.0.2",
     "pg": "6.4.2",
     "pg-hstore": "2.3.2",
