feat: login + TFA authentication

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -53,6 +53,9 @@ configNamespaces:
   - site
   - theme
   - uploads
+localeNamespaces:
+  - auth
+  - common
 queues:
   - gitSync
   - uplClearTemp
