--- a/package.json
+++ b/package.json
@@ -103,11 +103,13 @@
     "passport-auth0": "0.6.1",
     "passport-azure-ad-oauth2": "0.0.4",
     "passport-discord": "0.1.3",
+    "passport-dropbox-oauth2": "1.1.0",
     "passport-facebook": "2.1.1",
     "passport-github2": "0.1.11",
     "passport-google-oauth20": "1.0.0",
     "passport-ldapauth": "2.0.0",
     "passport-local": "1.0.0",
+    "passport-oauth2": "1.4.0",
     "passport-slack": "0.0.7",
     "passport-twitch": "1.0.3",
     "passport-windowslive": "1.0.2",
