refactor: switch to poi compiler

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node wiki start",
     "stop": "node wiki stop",
     "restart": "node wiki restart",
-    "build": "node dev/fuse --build",
-    "dev:client": "node dev/fuse --dev",
+    "build": "poi build",
+    "dev:client": "poi watch",
     "dev:server": "nodemon",
     "dev:server:alt": "node-dev server --no-deps --respawn --no-notify",
     "test": "eslint --ext .js,.vue . && jest"
@@ -168,8 +168,13 @@
     "node-dev": "3.1.3",
     "node-sass": "4.7.2",
     "nodemon": "1.14.3",
+    "poi": "9.6.12",
     "postcss-selector-parser": "3.1.1",
     "pug-lint": "2.5.0",
+    "raw-loader": "0.5.1",
+    "sass-loader": "6.0.6",
+    "sass-resources-loader": "1.3.1",
+    "svg-sprite-loader": "3.6.2",
     "twemoji-awesome": "1.0.6",
     "typescript": "2.6.2",
     "uglify-es": "3.2.2",
