--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node wiki start",
     "stop": "node wiki stop",
     "restart": "node wiki restart",
-    "build": "poi build",
+    "build": "webpack --config dev/webpack/webpack.prod.js",
     "build:analyze": "poi build --analyze",
     "dev:client": "poi watch",
     "dev:server": "nodemon",
@@ -144,13 +144,19 @@
     "autoprefixer": "7.2.3",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
+    "babel-eslint": "8.2.1",
     "babel-jest": "22.0.4",
+    "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "brace": "0.11.0",
+    "cache-loader": "1.2.0",
+    "clean-webpack-plugin": "0.1.17",
     "colors": "1.1.2",
     "consolidate": "0.15.0",
+    "copy-webpack-plugin": "4.3.1",
+    "css-loader": "0.28.9",
     "eslint": "4.13.1",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "11.0.0-beta.0",
@@ -159,7 +165,8 @@
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-standard": "3.0.1",
     "eslint-plugin-vue": "3.13.1",
-    "fuse-box": "2.5.0-beta.1",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.6",
     "graphql-tag": "^2.6.1",
     "i18next-xhr-backend": "1.5.0",
     "intl": "1.2.5",
@@ -169,20 +176,23 @@
     "node-dev": "3.1.3",
     "node-sass": "4.7.2",
     "nodemon": "1.14.3",
-    "poi": "9.6.12",
     "postcss-selector-parser": "3.1.1",
+    "progress-bar-webpack-plugin": "1.10.0",
     "pug-lint": "2.5.0",
     "raw-loader": "0.5.1",
     "sass-loader": "6.0.6",
     "sass-resources-loader": "1.3.1",
+    "style-loader": "0.19.1",
     "svg-sprite-loader": "3.6.2",
     "twemoji-awesome": "1.0.6",
     "typescript": "2.6.2",
     "uglify-es": "3.2.2",
+    "uglifyjs-webpack-plugin": "1.1.6",
     "vee-validate": "2.0.0-rc.27",
     "vue": "2.5.13",
     "vue-clipboards": "1.2.0",
     "vue-hot-reload-api": "2.2.4",
+    "vue-loader": "13.7.0",
     "vue-lodash": "1.0.4",
     "vue-material": "^0.8.1",
     "vue-resource": "1.3.5",
@@ -191,7 +201,9 @@
     "vue-template-es2015-compiler": "1.6.0",
     "vuex": "3.0.1",
     "vuex-persistedstate": "2.4.2",
+    "webpack": "3.10.0",
     "webpack-bundle-analyzer": "2.9.2",
+    "webpack-merge": "4.1.1",
     "whatwg-fetch": "2.0.3"
   },
   "jest": {
