refactor: webpack vendor, postcss + fixes

--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,7 @@
 {
   "comments": true,
   "presets": [
-    ["env", {
-      "targets": {
-        "browsers": [
-          "last 6 Chrome major versions",
-          "last 6 Firefox major versions",
-          "last 4 Safari major versions",
-          "last 4 Edge major versions",
-          "last 3 iOS major versions",
-          "last 3 Android major versions",
-          "last 2 ChromeAndroid major versions",
-          "Explorer 11"
-        ]
-      }
-    }],
+    ["env"],
     "stage-2"
   ]
 }
