--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
     "node-dev": "3.1.3",
     "node-sass": "4.7.2",
     "nodemon": "1.14.11",
+    "offline-plugin": "4.9.0",
     "postcss-loader": "2.0.10",
     "postcss-selector-parser": "3.1.1",
     "progress-bar-webpack-plugin": "1.10.0",
