fix: auth cookie set + graphQL http link

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "connect-flash": "0.1.1",
     "connect-redis": "3.3.3",
     "cookie-parser": "1.4.3",
+    "cors": "2.8.4",
     "diff2html": "2.3.3",
     "dotize": "^0.2.0",
     "execa": "0.9.0",
@@ -139,6 +140,8 @@
     "@glimpse/glimpse": "0.22.15",
     "@panter/vue-i18next": "0.9.1",
     "apollo-client-preset": "1.0.6",
+    "apollo-fetch": "0.7.0",
+    "apollo-link-batch-http": "1.0.4",
     "autoprefixer": "7.2.5",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
