--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -63,6 +63,7 @@ defaults:
       alt: blue-grey
       footer: blue-grey
       viewSource: false
+      treedepth: 2
       code:
         dark: true
         colorize: true
