refactor: removed 1.x client files

--- a/package.json
+++ b/package.json
@@ -148,6 +148,8 @@
     "babel-eslint": "8.2.1",
     "babel-jest": "22.1.0",
     "babel-loader": "7.1.2",
+    "babel-plugin-graphql-tag": "1.3.1",
+    "babel-plugin-lodash": "3.3.2",
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
@@ -171,22 +173,25 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
     "graphql-tag": "^2.6.1",
+    "hammerjs": "2.0.8",
     "i18next-xhr-backend": "1.5.1",
-    "intl": "1.2.5",
     "jest": "22.1.4",
     "jest-junit": "3.4.1",
     "js-cookie": "2.2.0",
+    "lodash-webpack-plugin": "0.11.4",
     "name-all-modules-plugin": "1.0.1",
     "node-dev": "3.1.3",
     "node-sass": "4.7.2",
     "offline-plugin": "4.9.0",
+    "postcss-flexbugs-fixes": "3.3.0",
+    "postcss-flexibility": "2.0.0",
     "postcss-loader": "2.0.10",
     "postcss-selector-parser": "3.1.1",
-    "progress-bar-webpack-plugin": "1.10.0",
     "pug-lint": "2.5.0",
     "raw-loader": "0.5.1",
     "sass-loader": "6.0.6",
     "sass-resources-loader": "1.3.1",
+    "simple-progress-webpack-plugin": "1.0.4",
     "style-loader": "0.20.1",
     "svg-sprite-loader": "3.6.2",
     "twemoji-awesome": "1.0.6",
