--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "restart": "node wiki restart",
     "dev": "node wiki dev",
     "build": "webpack --profile --config dev/webpack/webpack.prod.js",
+    "build:locales": "node dev/tasks/localization",
     "watch": "webpack --config dev/webpack/webpack.dev.js",
     "test": "eslint --ext .js,.vue . && jest"
   },
@@ -45,15 +46,14 @@
     "body-parser": "1.18.2",
     "bugsnag": "2.1.3",
     "bull": "3.3.8",
-    "bunyan": "1.8.12",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
     "chokidar": "2.0.0",
     "compression": "1.7.1",
-    "connect-flash": "0.1.1",
     "connect-redis": "3.3.3",
     "cookie-parser": "1.4.3",
     "cors": "2.8.4",
+    "dependency-graph": "0.7.0",
     "diff2html": "2.3.3",
     "dotize": "^0.2.0",
     "execa": "0.9.0",
@@ -75,7 +75,6 @@
     "i18next-node-fs-backend": "1.0.0",
     "image-size": "0.6.2",
     "ioredis": "3.2.2",
-    "jimp": "0.2.28",
     "js-yaml": "3.10.0",
     "jsonwebtoken": "8.1.1",
     "klaw": "2.1.1",
@@ -97,7 +96,7 @@
     "mongodb": "3.0.1",
     "multer": "1.3.0",
     "node-2fa": "1.1.2",
-    "node-graceful": "0.2.3",
+    "nodegit": "0.20.3",
     "ora": "1.3.0",
     "passport": "0.4.0",
     "passport-auth0": "0.6.1",
@@ -127,9 +126,6 @@
     "sequelize": "4.32.2",
     "serve-favicon": "2.4.5",
     "simplemde": "1.11.2",
-    "stream-to-promise": "2.2.0",
-    "tar": "4.3.0",
-    "through2": "2.0.3",
     "uuid": "3.2.1",
     "validator": "9.3.0",
     "validator-as-promised": "1.0.2",
@@ -157,7 +153,6 @@
     "cache-loader": "1.2.0",
     "clean-webpack-plugin": "0.1.18",
     "colors": "1.1.2",
-    "consolidate": "0.15.0",
     "copy-webpack-plugin": "4.3.1",
     "css-loader": "0.28.9",
     "cssnano": "4.0.0-rc.2",
@@ -180,7 +175,6 @@
     "js-cookie": "2.2.0",
     "lodash-webpack-plugin": "0.11.4",
     "name-all-modules-plugin": "1.0.1",
-    "node-dev": "3.1.3",
     "node-sass": "4.7.2",
     "offline-plugin": "4.9.0",
     "postcss-flexbugs-fixes": "3.3.0",
@@ -193,22 +187,15 @@
     "sass-resources-loader": "1.3.1",
     "simple-progress-webpack-plugin": "1.0.4",
     "style-loader": "0.20.1",
-    "svg-sprite-loader": "3.6.2",
     "twemoji-awesome": "1.0.6",
-    "typescript": "2.6.2",
-    "uglify-es": "3.3.9",
     "uglifyjs-webpack-plugin": "1.1.6",
     "vee-validate": "2.0.3",
     "vue": "2.5.13",
     "vue-clipboards": "1.2.1",
     "vue-hot-reload-api": "2.2.4",
     "vue-loader": "13.7.0",
-    "vue-lodash": "1.0.4",
-    "vue-material": "^0.8.1",
-    "vue-resource": "1.3.5",
     "vue-simple-breakpoints": "1.0.3",
     "vue-template-compiler": "2.5.13",
-    "vue-template-es2015-compiler": "1.6.0",
     "vuex": "3.0.1",
     "vuex-persistedstate": "2.4.2",
     "webpack": "3.10.0",
