--- a/package.json
+++ b/package.json
@@ -123,7 +123,6 @@
     "semver": "5.5.0",
     "sequelize": "4.32.2",
     "serve-favicon": "2.4.5",
-    "simplemde": "1.11.2",
     "uuid": "3.2.1",
     "validator": "9.3.0",
     "validator-as-promised": "1.0.2",
@@ -190,6 +189,7 @@
     "vee-validate": "2.0.3",
     "vue": "2.5.13",
     "vue-clipboards": "1.2.1",
+    "vue-codemirror": "4.0.3",
     "vue-hot-reload-api": "2.2.4",
     "vue-loader": "13.7.0",
     "vue-simple-breakpoints": "1.0.3",
