--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "babel-loader": "7.1.2",
     "babel-plugin-graphql-tag": "1.3.1",
     "babel-plugin-lodash": "3.3.2",
+    "babel-plugin-transform-imports": "1.4.1",
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
@@ -184,6 +185,8 @@
     "sass-resources-loader": "1.3.1",
     "simple-progress-webpack-plugin": "1.0.4",
     "style-loader": "0.20.1",
+    "stylus": "0.54.5",
+    "stylus-loader": "3.0.1",
     "twemoji-awesome": "1.0.6",
     "uglifyjs-webpack-plugin": "1.1.6",
     "vee-validate": "2.0.3",
@@ -194,6 +197,7 @@
     "vue-loader": "13.7.0",
     "vue-simple-breakpoints": "1.0.3",
     "vue-template-compiler": "2.5.13",
+    "vuetify": "0.17.7",
     "vuex": "3.0.1",
     "vuex-persistedstate": "2.4.2",
     "webpack": "3.10.0",
