--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "bluebird": "3.5.1",
     "body-parser": "1.18.2",
     "bugsnag": "2.1.3",
-    "bull": "3.3.8",
+    "bull": "3.3.9",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
-    "chokidar": "2.0.0",
+    "chokidar": "2.0.2",
     "compression": "1.7.1",
     "connect-redis": "3.3.3",
     "cookie-parser": "1.4.3",
@@ -61,15 +61,15 @@
     "express-brute": "1.0.1",
     "express-brute-redis": "0.0.1",
     "express-session": "1.15.6",
-    "file-type": "7.5.0",
+    "file-type": "7.6.0",
     "filesize.js": "1.0.2",
     "follow-redirects": "1.4.1",
     "fs-extra": "5.0.0",
-    "graphql": "0.12.3",
-    "graphql-tools": "2.19.0",
+    "graphql": "0.13.1",
+    "graphql-tools": "2.21.0",
     "highlight.js": "9.12.0",
-    "i18next": "10.3.0",
-    "i18next-express-middleware": "1.0.9",
+    "i18next": "10.4.1",
+    "i18next-express-middleware": "1.0.10",
     "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "1.0.0",
     "image-size": "0.6.2",
@@ -77,8 +77,8 @@
     "js-yaml": "3.10.0",
     "jsonwebtoken": "8.1.1",
     "klaw": "2.1.1",
-    "lodash": "4.17.4",
-    "markdown-it": "8.4.0",
+    "lodash": "4.17.5",
+    "markdown-it": "8.4.1",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-anchor": "4.0.0",
     "markdown-it-attrs": "1.2.1",
@@ -88,14 +88,14 @@
     "markdown-it-footnote": "3.0.1",
     "markdown-it-mathjax": "2.0.0",
     "markdown-it-task-lists": "2.1.0",
-    "mathjax-node": "1.3.0",
-    "mime-types": "2.1.17",
+    "mathjax-node": "2.0.1",
+    "mime-types": "2.1.18",
     "moment": "2.20.1",
     "moment-timezone": "0.5.14",
-    "mongodb": "3.0.1",
+    "mongodb": "3.0.2",
     "multer": "1.3.0",
     "node-2fa": "1.1.2",
-    "ora": "1.3.0",
+    "ora": "1.4.0",
     "passport": "0.4.0",
     "passport-auth0": "0.6.1",
     "passport-azure-ad-oauth2": "0.0.4",
@@ -112,7 +112,7 @@
     "passport-windowslive": "1.0.2",
     "pg": "6.4.2",
     "pg-hstore": "2.3.2",
-    "pg-promise": "7.4.1",
+    "pg-promise": "7.5.3",
     "pm2": "2.9.3",
     "pug": "2.0.0-rc.4",
     "qr-image": "3.2.0",
@@ -121,10 +121,10 @@
     "request": "2.83.0",
     "request-promise": "4.2.2",
     "semver": "5.5.0",
-    "sequelize": "4.32.2",
+    "sequelize": "4.33.4",
     "serve-favicon": "2.4.5",
     "uuid": "3.2.1",
-    "validator": "9.3.0",
+    "validator": "9.4.0",
     "validator-as-promised": "1.0.2",
     "winston": "2.4.0",
     "yargs": "11.0.0"
@@ -132,44 +132,45 @@
   "devDependencies": {
     "@glimpse/glimpse": "0.22.15",
     "@panter/vue-i18next": "0.9.1",
-    "apollo-client-preset": "1.0.6",
+    "apollo-client-preset": "1.0.8",
     "apollo-fetch": "0.7.0",
-    "apollo-link-batch-http": "1.0.4",
-    "autoprefixer": "7.2.5",
+    "apollo-link-batch-http": "1.0.5",
+    "autoprefixer": "8.0.0",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "8.2.1",
-    "babel-jest": "22.1.0",
+    "babel-jest": "22.2.2",
     "babel-loader": "7.1.2",
     "babel-plugin-graphql-tag": "1.3.1",
     "babel-plugin-lodash": "3.3.2",
     "babel-plugin-transform-imports": "1.4.1",
+    "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
-    "brace": "0.11.0",
+    "brace": "0.11.1",
     "cache-loader": "1.2.0",
     "clean-webpack-plugin": "0.1.18",
     "colors": "1.1.2",
-    "copy-webpack-plugin": "4.3.1",
+    "copy-webpack-plugin": "4.4.1",
     "css-loader": "0.28.9",
     "cssnano": "4.0.0-rc.2",
     "duplicate-package-checker-webpack-plugin": "2.1.0",
-    "eslint": "4.16.0",
+    "eslint": "4.18.0",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "11.0.0-beta.0",
     "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-node": "5.2.1",
+    "eslint-plugin-node": "6.0.0",
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-standard": "3.0.1",
-    "eslint-plugin-vue": "4.2.0",
+    "eslint-plugin-vue": "4.2.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
-    "graphql-tag": "^2.6.1",
+    "graphql-tag": "^2.7.3",
     "hammerjs": "2.0.8",
     "i18next-xhr-backend": "1.5.1",
-    "jest": "22.1.4",
-    "jest-junit": "3.4.1",
+    "jest": "22.3.0",
+    "jest-junit": "3.6.0",
     "js-cookie": "2.2.0",
     "lodash-webpack-plugin": "0.11.4",
     "name-all-modules-plugin": "1.0.1",
@@ -177,32 +178,32 @@
     "offline-plugin": "4.9.0",
     "postcss-flexbugs-fixes": "3.3.0",
     "postcss-flexibility": "2.0.0",
-    "postcss-loader": "2.0.10",
+    "postcss-loader": "2.1.0",
     "postcss-selector-parser": "3.1.1",
     "pug-lint": "2.5.0",
     "raw-loader": "0.5.1",
     "sass-loader": "6.0.6",
-    "sass-resources-loader": "1.3.1",
+    "sass-resources-loader": "1.3.2",
     "simple-progress-webpack-plugin": "1.0.4",
-    "style-loader": "0.20.1",
+    "style-loader": "0.20.2",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.1",
     "twemoji-awesome": "1.0.6",
-    "uglifyjs-webpack-plugin": "1.1.6",
-    "vee-validate": "2.0.3",
+    "uglifyjs-webpack-plugin": "1.2.0",
+    "vee-validate": "2.0.4",
     "vue": "2.5.13",
     "vue-clipboards": "1.2.1",
     "vue-codemirror": "4.0.3",
     "vue-hot-reload-api": "2.2.4",
-    "vue-loader": "13.7.0",
+    "vue-loader": "14.1.1",
     "vue-simple-breakpoints": "1.0.3",
     "vue-template-compiler": "2.5.13",
-    "vuetify": "0.17.7",
+    "vuetify": "1.0.1",
     "vuex": "3.0.1",
     "vuex-persistedstate": "2.4.2",
-    "webpack": "3.10.0",
-    "webpack-bundle-analyzer": "2.9.2",
-    "webpack-dev-middleware": "2.0.4",
+    "webpack": "3.11.0",
+    "webpack-bundle-analyzer": "2.10.0",
+    "webpack-dev-middleware": "2.0.5",
     "webpack-hot-middleware": "2.21.0",
     "webpack-merge": "4.1.1",
     "whatwg-fetch": "2.0.3",
