feat: editor preview tabs, abbr, sup, sub, mark and img size

--- a/package.json
+++ b/package.json
@@ -85,7 +85,11 @@
     "markdown-it-expand-tabs": "1.0.12",
     "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "3.0.1",
+    "markdown-it-imsize": "2.0.1",
+    "markdown-it-mark": "2.0.0",
     "markdown-it-mathjax": "2.0.0",
+    "markdown-it-sub": "1.0.0",
+    "markdown-it-sup": "1.0.0",
     "markdown-it-task-lists": "2.1.0",
     "mathjax-node": "2.0.1",
     "mime-types": "2.1.18",
