--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "mongodb": "3.0.2",
     "multer": "1.3.0",
     "node-2fa": "1.1.2",
+    "oauth2orize": "1.11.0",
     "ora": "1.4.0",
     "passport": "0.4.0",
     "passport-auth0": "0.6.1",
