--- a/package.json
+++ b/package.json
@@ -40,16 +40,16 @@
   "dependencies": {
     "apollo-server-express": "1.3.2",
     "auto-load": "3.0.0",
-    "axios": "0.17.1",
+    "axios": "0.18.0",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.1",
     "body-parser": "1.18.2",
-    "bugsnag": "2.1.3",
-    "bull": "3.3.9",
+    "bugsnag": "2.3.0",
+    "bull": "3.3.10",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
     "chokidar": "2.0.2",
-    "compression": "1.7.1",
+    "compression": "1.7.2",
     "connect-redis": "3.3.3",
     "cookie-parser": "1.4.3",
     "cors": "2.8.4",
@@ -67,14 +67,14 @@
     "fs-extra": "5.0.0",
     "graphql": "0.13.1",
     "graphql-tools": "2.21.0",
-    "i18next": "10.4.1",
-    "i18next-express-middleware": "1.0.10",
+    "i18next": "10.5.0",
+    "i18next-express-middleware": "1.1.1",
     "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "1.0.0",
     "image-size": "0.6.2",
     "ioredis": "3.2.2",
-    "js-yaml": "3.10.0",
-    "jsonwebtoken": "8.1.1",
+    "js-yaml": "3.11.0",
+    "jsonwebtoken": "8.2.0",
     "klaw": "2.1.1",
     "lodash": "4.17.5",
     "markdown-it": "8.4.1",
@@ -93,13 +93,13 @@
     "markdown-it-task-lists": "2.1.0",
     "mathjax-node": "2.0.1",
     "mime-types": "2.1.18",
-    "moment": "2.20.1",
+    "moment": "2.21.0",
     "moment-timezone": "0.5.14",
-    "mongodb": "3.0.2",
+    "mongodb": "3.0.4",
     "multer": "1.3.0",
     "node-2fa": "1.1.2",
     "oauth2orize": "1.11.0",
-    "ora": "1.4.0",
+    "ora": "2.0.0",
     "passport": "0.4.0",
     "passport-auth0": "0.6.1",
     "passport-azure-ad-oauth2": "0.0.4",
@@ -117,19 +117,19 @@
     "pg": "6.4.2",
     "pg-hstore": "2.3.2",
     "pg-promise": "7.5.3",
-    "pm2": "2.9.3",
+    "pm2": "2.10.1",
     "pug": "2.0.0-rc.4",
     "qr-image": "3.2.0",
-    "raven": "2.4.1",
+    "raven": "2.4.2",
     "read-chunk": "2.1.0",
     "remove-markdown": "0.2.2",
     "request": "2.83.0",
     "request-promise": "4.2.2",
     "semver": "5.5.0",
-    "sequelize": "4.33.4",
+    "sequelize": "4.35.2",
     "serve-favicon": "2.4.5",
     "uuid": "3.2.1",
-    "validator": "9.4.0",
+    "validator": "9.4.1",
     "validator-as-promised": "1.0.2",
     "winston": "2.4.0",
     "yargs": "11.0.0"
@@ -139,42 +139,42 @@
     "@panter/vue-i18next": "0.9.1",
     "apollo-client-preset": "1.0.8",
     "apollo-fetch": "0.7.0",
-    "apollo-link-batch-http": "1.0.5",
-    "autoprefixer": "8.0.0",
+    "apollo-link-batch-http": "1.2.1",
+    "autoprefixer": "8.1.0",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
-    "babel-eslint": "8.2.1",
-    "babel-jest": "22.2.2",
-    "babel-loader": "7.1.2",
-    "babel-plugin-graphql-tag": "1.3.1",
+    "babel-eslint": "8.2.2",
+    "babel-jest": "22.4.1",
+    "babel-loader": "7.1.3",
+    "babel-plugin-graphql-tag": "1.5.0",
     "babel-plugin-lodash": "3.3.2",
-    "babel-plugin-transform-imports": "1.4.1",
+    "babel-plugin-transform-imports": "1.5.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "brace": "0.11.1",
-    "cache-loader": "1.2.0",
+    "cache-loader": "1.2.2",
     "clean-webpack-plugin": "0.1.18",
     "colors": "1.1.2",
-    "copy-webpack-plugin": "4.4.1",
-    "css-loader": "0.28.9",
+    "copy-webpack-plugin": "4.5.0",
+    "css-loader": "0.28.10",
     "cssnano": "4.0.0-rc.2",
     "duplicate-package-checker-webpack-plugin": "2.1.0",
-    "eslint": "4.18.0",
+    "eslint": "4.18.2",
     "eslint-config-requarks": "1.0.7",
-    "eslint-config-standard": "11.0.0-beta.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-node": "6.0.0",
+    "eslint-config-standard": "11.0.0",
+    "eslint-plugin-import": "2.9.0",
+    "eslint-plugin-node": "6.0.1",
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-standard": "3.0.1",
-    "eslint-plugin-vue": "4.2.2",
+    "eslint-plugin-vue": "4.3.0",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.6",
-    "graphql-tag": "^2.7.3",
+    "file-loader": "1.1.11",
+    "graphql-tag": "^2.8.0",
     "hammerjs": "2.0.8",
     "i18next-xhr-backend": "1.5.1",
-    "jest": "22.3.0",
+    "jest": "22.4.2",
     "jest-junit": "3.6.0",
     "js-cookie": "2.2.0",
     "lodash-webpack-plugin": "0.11.4",
@@ -183,37 +183,37 @@
     "offline-plugin": "4.9.0",
     "postcss-flexbugs-fixes": "3.3.0",
     "postcss-flexibility": "2.0.0",
-    "postcss-loader": "2.1.0",
+    "postcss-loader": "2.1.1",
     "postcss-selector-parser": "3.1.1",
     "pug-lint": "2.5.0",
     "raw-loader": "0.5.1",
-    "sass-loader": "6.0.6",
-    "sass-resources-loader": "1.3.2",
-    "simple-progress-webpack-plugin": "1.0.4",
+    "sass-loader": "6.0.7",
+    "sass-resources-loader": "1.3.3",
+    "simple-progress-webpack-plugin": "1.1.1",
     "style-loader": "0.20.2",
     "stylus": "0.54.5",
-    "stylus-loader": "3.0.1",
+    "stylus-loader": "3.0.2",
     "twemoji-awesome": "1.0.6",
-    "uglifyjs-webpack-plugin": "1.2.0",
-    "vee-validate": "2.0.4",
+    "uglifyjs-webpack-plugin": "1.2.2",
+    "vee-validate": "2.0.5",
     "velocity-animate": "1.5.1",
     "vue": "2.5.13",
-    "vue-clipboards": "1.2.1",
+    "vue-clipboards": "1.2.2",
     "vue-codemirror": "4.0.3",
-    "vue-hot-reload-api": "2.2.4",
+    "vue-hot-reload-api": "2.3.0",
     "vue-loader": "14.1.1",
     "vue-material-design-icons": "1.1.0",
     "vue-router": "3.0.1",
     "vue-simple-breakpoints": "1.0.3",
     "vue-template-compiler": "2.5.13",
-    "vuetify": "1.0.1",
+    "vuetify": "1.0.4",
     "vuex": "3.0.1",
     "vuex-persistedstate": "2.4.2",
     "webpack": "3.11.0",
-    "webpack-bundle-analyzer": "2.10.0",
-    "webpack-dev-middleware": "2.0.5",
-    "webpack-hot-middleware": "2.21.0",
-    "webpack-merge": "4.1.1",
+    "webpack-bundle-analyzer": "2.11.1",
+    "webpack-dev-middleware": "3.0.0",
+    "webpack-hot-middleware": "2.21.2",
+    "webpack-merge": "4.1.2",
     "whatwg-fetch": "2.0.3",
     "write-file-webpack-plugin": "4.2.0"
   },
