--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -31,7 +31,7 @@ defaults:
       public: false
       strategies:
         local:
-          enabled: true
+          isEnabled: true
           allowSelfRegister: false
     git:
       enabled: false
