fix: migrate setup to vuetify + remove git related steps

--- a/config.sample.yml
+++ b/config.sample.yml
@@ -15,7 +15,7 @@ port: 80
 # ---------------------------------------------------------------------
 
 paths:
-  repo: ./repo
+  content: ./content
   data: ./data
 
 # ---------------------------------------------------------------------
