--- a/package.json
+++ b/package.json
@@ -128,12 +128,12 @@
     "request-promise": "4.2.2",
     "scim-query-filter-parser": "1.1.0",
     "semver": "5.5.0",
-    "sequelize": "4.35.2",
+    "sequelize": "4.36.0",
     "serve-favicon": "2.4.5",
     "uuid": "3.2.1",
     "validator": "9.4.1",
     "validator-as-promised": "1.0.2",
-    "winston": "2.4.0",
+    "winston": "3.0.0-rc2",
     "yargs": "11.0.0"
   },
   "devDependencies": {
@@ -157,8 +157,8 @@
     "brace": "0.11.1",
     "cache-loader": "1.2.2",
     "clean-webpack-plugin": "0.1.19",
-    "colors": "1.1.2",
-    "copy-webpack-plugin": "4.5.0",
+    "colors": "1.2.0",
+    "copy-webpack-plugin": "4.5.1",
     "css-loader": "0.28.10",
     "cssnano": "4.0.0-rc.2",
     "duplicate-package-checker-webpack-plugin": "2.1.0",
@@ -192,15 +192,15 @@
     "sass-loader": "6.0.7",
     "sass-resources-loader": "1.3.3",
     "simple-progress-webpack-plugin": "1.1.2",
-    "style-loader": "0.20.2",
+    "style-loader": "0.20.3",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
     "twemoji-awesome": "1.0.6",
-    "uglifyjs-webpack-plugin": "1.2.2",
+    "uglifyjs-webpack-plugin": "1.2.3",
     "vee-validate": "2.0.5",
     "velocity-animate": "1.5.1",
-    "vue": "2.5.13",
-    "vue-apollo": "3.0.0-beta.4",
+    "vue": "2.5.15",
+    "vue-apollo": "3.0.0-beta.5",
     "vue-clipboards": "1.2.2",
     "vue-codemirror": "4.0.3",
     "vue-hot-reload-api": "2.3.0",
@@ -208,8 +208,8 @@
     "vue-material-design-icons": "1.2.1",
     "vue-router": "3.0.1",
     "vue-simple-breakpoints": "1.0.3",
-    "vue-template-compiler": "2.5.13",
-    "vuetify": "1.0.5",
+    "vue-template-compiler": "2.5.15",
+    "vuetify": "1.0.6",
     "vuex": "3.0.1",
     "vuex-persistedstate": "2.4.2",
     "webpack": "3.11.0",
