feat: add graphiql to admin-dev

--- a/package.json
+++ b/package.json
@@ -172,9 +172,11 @@
     "eslint-plugin-vue": "4.3.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.11",
+    "graphiql": "0.11.11",
     "graphql-tag": "^2.8.0",
     "hammerjs": "2.0.8",
     "i18next-xhr-backend": "1.5.1",
+    "ignore-loader": "0.1.2",
     "jest": "22.4.2",
     "jest-junit": "3.6.0",
     "js-cookie": "2.2.0",
@@ -189,6 +191,8 @@
     "postcss-selector-parser": "3.1.1",
     "pug-lint": "2.5.0",
     "raw-loader": "0.5.1",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
     "sass-loader": "6.0.7",
     "sass-resources-loader": "1.3.3",
     "simple-progress-webpack-plugin": "1.1.2",
