feat: webpack-html-plugin

--- a/package.json
+++ b/package.json
@@ -175,6 +175,8 @@
     "graphiql": "0.11.11",
     "graphql-tag": "^2.8.0",
     "hammerjs": "2.0.8",
+    "html-webpack-plugin": "3.0.6",
+    "html-webpack-pug-plugin": "0.3.0",
     "i18next-xhr-backend": "1.5.1",
     "ignore-loader": "0.1.2",
     "jest": "22.4.2",
@@ -190,11 +192,13 @@
     "postcss-loader": "2.1.1",
     "postcss-selector-parser": "3.1.1",
     "pug-lint": "2.5.0",
+    "pug-loader": "2.3.0",
     "raw-loader": "0.5.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "sass-loader": "6.0.7",
     "sass-resources-loader": "1.3.3",
+    "script-ext-html-webpack-plugin": "2.0.1",
     "simple-progress-webpack-plugin": "1.1.2",
     "style-loader": "0.20.3",
     "stylus": "0.54.5",
