Fix sample config: 'autoRegisterIds'

--- a/config.sample.yml
+++ b/config.sample.yml
@@ -80,7 +80,7 @@ auth:
     clientSecret: GITHUB_CLIENT_SECRET
   slack:
     enabled: false
-    allowDomains: []
+    autoRegisterIds: []
     clientId: 'SLACK_CLIENT_ID'
     clientSecret: 'SLACK_CLIENT_SECRET'
   ldap:
