--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "moment-timezone": "0.5.14",
     "mongodb": "3.0.4",
     "multer": "1.3.0",
+    "mysql2": "1.5.3",
     "node-2fa": "1.1.2",
     "oauth2orize": "1.11.0",
     "ora": "2.0.0",
@@ -130,6 +131,7 @@
     "semver": "5.5.0",
     "sequelize": "4.37.1",
     "serve-favicon": "2.4.5",
+    "sqlite3": "4.0.0",
     "uuid": "3.2.1",
     "validator": "9.4.1",
     "validator-as-promised": "1.0.2",
