--- a/package.json
+++ b/package.json
@@ -218,6 +218,7 @@
     "vue-hot-reload-api": "2.3.0",
     "vue-loader": "14.2.1",
     "vue-material-design-icons": "1.2.1",
+    "vue-moment": "3.2.0",
     "vue-router": "3.0.1",
     "vue-simple-breakpoints": "1.0.3",
     "vue-template-compiler": "2.5.16",
