--- a/package.json
+++ b/package.json
@@ -38,17 +38,17 @@
     "node": ">=8.9.3"
   },
   "dependencies": {
-    "apollo-server-express": "1.3.2",
+    "apollo-server-express": "1.3.6",
     "auto-load": "3.0.0",
     "axios": "0.18.0",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.1",
     "body-parser": "1.18.2",
     "bugsnag": "2.3.1",
-    "bull": "3.3.10",
+    "bull": "3.4.1",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
-    "chokidar": "2.0.2",
+    "chokidar": "2.0.3",
     "compression": "1.7.2",
     "connect-redis": "3.3.3",
     "cookie-parser": "1.4.3",
@@ -66,18 +66,18 @@
     "follow-redirects": "1.4.1",
     "fs-extra": "5.0.0",
     "graphql": "0.13.2",
-    "graphql-list-fields": "2.0.1",
-    "graphql-tools": "2.23.1",
-    "i18next": "10.5.1",
+    "graphql-list-fields": "2.0.2",
+    "graphql-tools": "3.0.0",
+    "i18next": "11.2.3",
     "i18next-express-middleware": "1.1.1",
     "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "1.0.0",
     "image-size": "0.6.2",
     "ioredis": "3.2.2",
     "js-yaml": "3.11.0",
-    "jsonwebtoken": "8.2.0",
+    "jsonwebtoken": "8.2.1",
     "klaw": "2.1.1",
-    "lodash": "4.17.5",
+    "lodash": "4.17.10",
     "markdown-it": "8.4.1",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-anchor": "4.0.0",
@@ -92,11 +92,11 @@
     "markdown-it-sub": "1.0.0",
     "markdown-it-sup": "1.0.0",
     "markdown-it-task-lists": "2.1.1",
-    "mathjax-node": "2.0.1",
+    "mathjax-node": "2.1.0",
     "mime-types": "2.1.18",
-    "moment": "2.21.0",
-    "moment-timezone": "0.5.14",
-    "mongodb": "3.0.4",
+    "moment": "2.22.1",
+    "moment-timezone": "0.5.16",
+    "mongodb": "3.0.7",
     "multer": "1.3.0",
     "mysql2": "1.5.3",
     "node-2fa": "1.1.2",
@@ -119,18 +119,18 @@
     "pg": "6.4.2",
     "pg-hstore": "2.3.2",
     "pg-promise": "7.5.3",
-    "pm2": "2.10.1",
-    "pug": "2.0.1",
+    "pm2": "2.10.3",
+    "pug": "2.0.3",
     "qr-image": "3.2.0",
-    "raven": "2.4.2",
+    "raven": "2.6.0",
     "read-chunk": "2.1.0",
     "remove-markdown": "0.2.2",
     "request": "2.85.0",
     "request-promise": "4.2.2",
     "scim-query-filter-parser": "1.1.0",
     "semver": "5.5.0",
-    "sequelize": "4.37.1",
-    "serve-favicon": "2.4.5",
+    "sequelize": "4.37.6",
+    "serve-favicon": "2.5.0",
     "sqlite3": "4.0.0",
     "uuid": "3.2.1",
     "validator": "9.4.1",
@@ -140,14 +140,14 @@
   },
   "devDependencies": {
     "@panter/vue-i18next": "0.9.1",
-    "@vue/cli": "3.0.0-beta.6",
+    "@vue/cli": "3.0.0-beta.9",
     "apollo-client-preset": "1.0.8",
     "apollo-fetch": "0.7.0",
-    "apollo-link-batch-http": "1.2.1",
-    "autoprefixer": "8.1.0",
+    "apollo-link-batch-http": "1.2.2",
+    "autoprefixer": "8.3.0",
     "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.2.2",
+    "babel-core": "6.26.3",
+    "babel-eslint": "8.2.3",
     "babel-jest": "23.0.0-alpha.0",
     "babel-loader": "7.1.4",
     "babel-plugin-graphql-tag": "1.5.0",
@@ -164,74 +164,75 @@
     "copy-webpack-plugin": "4.5.1",
     "css-loader": "0.28.11",
     "cssnano": "4.0.0-rc.2",
-    "duplicate-package-checker-webpack-plugin": "2.1.0",
-    "eslint": "4.19.0",
+    "duplicate-package-checker-webpack-plugin": "3.0.0",
+    "eslint": "4.19.1",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "11.0.0",
-    "eslint-plugin-import": "2.9.0",
+    "eslint-plugin-import": "2.11.0",
     "eslint-plugin-node": "6.0.1",
     "eslint-plugin-promise": "3.7.0",
-    "eslint-plugin-standard": "3.0.1",
-    "eslint-plugin-vue": "4.3.0",
+    "eslint-plugin-standard": "3.1.0",
+    "eslint-plugin-vue": "4.5.0",
     "file-loader": "1.1.11",
     "graphiql": "0.11.11",
-    "graphql-tag": "^2.8.0",
+    "graphql-tag": "^2.9.1",
     "graphql-voyager": "1.0.0-rc.15",
     "hammerjs": "2.0.8",
-    "html-webpack-plugin": "3.0.6",
+    "html-webpack-plugin": "3.2.0",
     "html-webpack-pug-plugin": "0.3.0",
     "i18next-xhr-backend": "1.5.1",
     "ignore-loader": "0.1.2",
-    "jest": "22.4.2",
-    "jest-junit": "3.6.0",
+    "jest": "22.4.3",
+    "jest-junit": "3.7.0",
     "js-cookie": "2.2.0",
-    "lodash-webpack-plugin": "0.11.4",
-    "mini-css-extract-plugin": "0.2.0",
-    "node-sass": "4.7.2",
-    "offline-plugin": "4.9.0",
+    "lodash-webpack-plugin": "0.11.5",
+    "mini-css-extract-plugin": "0.4.0",
+    "node-sass": "4.9.0",
+    "offline-plugin": "5.0.1",
     "optimize-css-assets-webpack-plugin": "4.0.0",
     "postcss-cssnext": "3.1.0",
     "postcss-flexbugs-fixes": "3.3.0",
     "postcss-flexibility": "2.0.0",
     "postcss-import": "11.1.0",
-    "postcss-loader": "2.1.2",
-    "postcss-selector-parser": "3.1.1",
+    "postcss-loader": "2.1.4",
+    "postcss-selector-parser": "4.0.0",
     "pug-lint": "2.5.0",
-    "pug-loader": "2.3.0",
+    "pug-loader": "2.4.0",
+    "pug-plain-loader": "1.0.0",
     "raw-loader": "0.5.1",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "sass-loader": "6.0.7",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
+    "sass-loader": "7.0.1",
     "sass-resources-loader": "1.3.3",
     "script-ext-html-webpack-plugin": "2.0.1",
     "simple-progress-webpack-plugin": "1.1.2",
-    "style-loader": "0.20.3",
+    "style-loader": "0.21.0",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
     "twemoji-awesome": "1.0.6",
-    "vee-validate": "2.0.5",
+    "vee-validate": "2.0.8",
     "velocity-animate": "1.5.1",
     "vue": "2.5.16",
     "vue-apollo": "3.0.0-beta.5",
-    "vue-clipboards": "1.2.2",
-    "vue-codemirror": "4.0.3",
+    "vue-clipboards": "1.2.4",
+    "vue-codemirror": "4.0.5",
     "vue-hot-reload-api": "2.3.0",
-    "vue-loader": "14.2.1",
-    "vue-material-design-icons": "1.2.1",
+    "vue-loader": "15.0.4",
+    "vue-material-design-icons": "1.4.0",
     "vue-moment": "3.2.0",
     "vue-router": "3.0.1",
     "vue-simple-breakpoints": "1.0.3",
     "vue-template-compiler": "2.5.16",
-    "vuetify": "1.0.8",
+    "vuetify": "1.0.17",
     "vuex": "3.0.1",
-    "vuex-persistedstate": "2.5.1",
-    "webpack": "4.1.1",
+    "vuex-persistedstate": "2.5.2",
+    "webpack": "4.6.0",
     "webpack-bundle-analyzer": "2.11.1",
-    "webpack-cli": "2.0.12",
-    "webpack-dev-middleware": "3.0.1",
-    "webpack-hot-middleware": "2.21.2",
+    "webpack-cli": "2.0.15",
+    "webpack-dev-middleware": "3.1.3",
+    "webpack-hot-middleware": "2.22.1",
     "webpack-merge": "4.1.2",
-    "whatwg-fetch": "2.0.3",
+    "whatwg-fetch": "2.0.4",
     "write-file-webpack-plugin": "4.2.0"
   },
   "browserslist": [
