feat: admin - download locale strings from graph

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -64,6 +64,9 @@ localeNamespaces:
   - auth
   - common
 jobs:
+  fetchGraphLocale:
+    onInit: false
+    cron: false
   purgeUploads:
     onInit: true
     cron: '*/15 * * * *'
