--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "restart": "node wiki restart",
     "dev": "node wiki dev",
     "build": "webpack --profile --config dev/webpack/webpack.prod.js",
-    "build:locales": "node dev/tasks/localization",
     "watch": "webpack --config dev/webpack/webpack.dev.js",
     "test": "eslint --format codeframe --ext .js,.vue . && pug-lint server/views && jest"
   },
@@ -43,9 +42,9 @@
     "axios": "0.18.0",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.1",
-    "body-parser": "1.18.2",
+    "body-parser": "1.18.3",
     "bugsnag": "2.3.1",
-    "bull": "3.4.1",
+    "bull": "3.4.2",
     "cheerio": "1.0.0-rc.2",
     "child-process-promise": "2.2.1",
     "chokidar": "2.0.3",
@@ -61,15 +60,15 @@
     "express-brute": "1.0.1",
     "express-brute-redis": "0.0.1",
     "express-session": "1.15.6",
-    "file-type": "7.7.1",
+    "file-type": "8.0.0",
     "filesize.js": "1.0.2",
-    "follow-redirects": "1.4.1",
+    "follow-redirects": "1.5.0",
     "fs-extra": "6.0.1",
     "getos": "3.1.0",
     "graphql": "0.13.2",
     "graphql-list-fields": "2.0.2",
     "graphql-tools": "3.0.1",
-    "i18next": "11.3.1",
+    "i18next": "11.3.2",
     "i18next-express-middleware": "1.1.1",
     "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "1.0.0",
@@ -78,6 +77,7 @@
     "js-yaml": "3.11.0",
     "jsonwebtoken": "8.2.1",
     "klaw": "2.1.1",
+    "knex": "0.14.6",
     "lodash": "4.17.10",
     "markdown-it": "8.4.1",
     "markdown-it-abbr": "1.0.4",
@@ -96,12 +96,14 @@
     "mathjax-node": "2.1.0",
     "mime-types": "2.1.18",
     "moment": "2.22.1",
-    "moment-timezone": "0.5.16",
-    "mongodb": "3.0.7",
+    "moment-timezone": "0.5.17",
+    "mongodb": "3.1.0-beta4",
+    "mssql": "4.1.0",
     "multer": "1.3.0",
     "mysql2": "1.5.3",
     "node-2fa": "1.1.2",
     "oauth2orize": "1.11.0",
+    "objection": "1.1.8",
     "ora": "2.1.0",
     "passport": "0.4.0",
     "passport-auth0": "0.6.1",
@@ -117,20 +119,18 @@
     "passport-slack": "0.0.7",
     "passport-twitch": "1.0.3",
     "passport-windowslive": "1.0.2",
-    "pg": "6.4.2",
+    "pg": "7.4.3",
     "pg-hstore": "2.3.2",
-    "pg-promise": "7.5.3",
-    "pm2": "2.10.3",
+    "pm2": "2.10.4",
     "pug": "2.0.3",
     "qr-image": "3.2.0",
-    "raven": "2.6.1",
+    "raven": "2.6.2",
     "read-chunk": "2.1.0",
     "remove-markdown": "0.2.2",
-    "request": "2.85.0",
+    "request": "2.86.0",
     "request-promise": "4.2.2",
     "scim-query-filter-parser": "1.1.0",
     "semver": "5.5.0",
-    "sequelize": "4.37.7",
     "serve-favicon": "2.5.0",
     "sqlite3": "4.0.0",
     "uuid": "3.2.1",
@@ -145,7 +145,7 @@
     "apollo-client-preset": "1.0.8",
     "apollo-fetch": "0.7.0",
     "apollo-link-batch-http": "1.2.2",
-    "autoprefixer": "8.4.1",
+    "autoprefixer": "8.5.0",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-eslint": "8.2.3",
@@ -169,7 +169,7 @@
     "eslint": "4.19.1",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "11.0.0",
-    "eslint-plugin-import": "2.11.0",
+    "eslint-plugin-import": "2.12.0",
     "eslint-plugin-node": "6.0.1",
     "eslint-plugin-promise": "3.7.0",
     "eslint-plugin-standard": "3.1.0",
@@ -183,8 +183,8 @@
     "html-webpack-pug-plugin": "0.3.0",
     "i18next-xhr-backend": "1.5.1",
     "ignore-loader": "0.1.2",
-    "jest": "22.4.3",
-    "jest-junit": "3.7.0",
+    "jest": "22.4.4",
+    "jest-junit": "4.0.0",
     "js-cookie": "2.2.0",
     "lodash-webpack-plugin": "0.11.5",
     "mini-css-extract-plugin": "0.4.0",
@@ -196,7 +196,7 @@
     "postcss-flexibility": "2.0.0",
     "postcss-import": "11.1.0",
     "postcss-loader": "2.1.5",
-    "postcss-selector-parser": "4.0.0",
+    "postcss-selector-parser": "5.0.0-rc.3",
     "pug-lint": "2.5.0",
     "pug-loader": "2.4.0",
     "pug-plain-loader": "1.0.0",
@@ -218,23 +218,23 @@
     "vue-clipboards": "1.2.4",
     "vue-codemirror": "4.0.5",
     "vue-hot-reload-api": "2.3.0",
-    "vue-loader": "15.0.10",
+    "vue-loader": "15.1.0",
     "vue-material-design-icons": "1.4.0",
-    "vue-moment": "3.2.0",
+    "vue-moment": "4.0.0-0",
     "vue-router": "3.0.1",
     "vue-simple-breakpoints": "1.0.3",
     "vue-template-compiler": "2.5.16",
-    "vuetify": "1.0.17",
+    "vuetify": "1.0.18",
     "vuex": "3.0.1",
-    "vuex-persistedstate": "2.5.2",
-    "webpack": "4.8.2",
-    "webpack-bundle-analyzer": "2.11.2",
+    "vuex-persistedstate": "2.5.4",
+    "webpack": "4.8.3",
+    "webpack-bundle-analyzer": "2.12.0",
     "webpack-cli": "2.1.3",
     "webpack-dev-middleware": "3.1.3",
-    "webpack-hot-middleware": "2.22.1",
+    "webpack-hot-middleware": "2.22.2",
     "webpack-merge": "4.1.2",
     "whatwg-fetch": "2.0.4",
-    "write-file-webpack-plugin": "4.2.0"
+    "write-file-webpack-plugin": "4.3.2"
   },
   "browserslist": [
     "> 1%",
