refactor: remove config namespaces

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -23,12 +23,6 @@ defaults:
       port: 6379
       db: 0
       password: null
-    configMode: auto
-    workers: 0
-    ha:
-      node: primary
-      uid: master
-      readonly: false
     # DB defaults
     auth:
       public: false
@@ -36,8 +30,6 @@ defaults:
         local:
           isEnabled: true
           allowSelfRegister: false
-    git:
-      enabled: false
     logging:
       telemetry: false
       loggers:
@@ -48,6 +40,7 @@ defaults:
       rtl: false
       title: Wiki.js
     # System defaults
+    setup: false
     cors:
       credentials: true
       maxAge: 600
