--- a/config.sample.yml
+++ b/config.sample.yml
@@ -5,7 +5,7 @@
 # https://docs.requarks.io/wiki/install
 
 # ---------------------------------------------------------------------
-# Port the main server should listen to
+# Port the server should listen to
 # ---------------------------------------------------------------------
 
 port: 80
@@ -55,27 +55,3 @@ redis:
 # Possible values: error, warn, info (default), verbose, debug, silly
 
 logLevel: info
-
-# ---------------------------------------------------------------------
-# Configuration Mode
-# ---------------------------------------------------------------------
-# Possible values: auto (default), file, setup
-
-configMode: auto
-
-# ---------------------------------------------------------------------
-# Background Workers
-# ---------------------------------------------------------------------
-# Leave 0 for auto based on CPU cores
-
-workers: 0
-
-# ---------------------------------------------------------------------
-# High Availability
-# ---------------------------------------------------------------------
-# Read the docs BEFORE changing these settings!
-
-ha:
-  node: primary
-  uid: master
-  readonly: false
